--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
       <button class="btn-numbers btn-operators"  id="btnB">&#x21FD</button>
       <button class="btn-numbers btn-operators" id="divisor">/</button>
       <button class="btn-numbers btn-operators" id="mult">*</button>
-      <button class="btn-numbers" id="b7">7</button>
-      <button class="btn-numbers" id="b8">8</button>
-      <button class="btn-numbers" id="b9">9</button>
-      <button class="btn-numbers btn-operators" id="bminus">-</button>
-      <button class="btn-numbers" id="4">4</button>
-      <button class="btn-numbers" id="5">5</button>
-      <button class="btn-numbers" id="6">6</button>
-      <button class="btn-numbers btn-operators"id="plus">+</button>
-      <button class="btn-numbers" id="btn1">1</button>
-      <button class="btn-numbers" id="btn2">2</button>
-      <button class="btn-numbers" id="btn3">3</button>
-      <button class="btn-numbers btn-operators" id="equals" >=</button>
-      <button class="btn-numbers" id="btn0" >0</button>
+      <button class="btn-numbers" >7</button>
+      <button class="btn-numbers" >8</button>
+      <button class="btn-numbers" >9</button>
+      <button class="btn-numbers btn-operators" >-</button>
+      <button class="btn-numbers">4</button>
+      <button class="btn-numbers" >5</button>
+      <button class="btn-numbers" >6</button>
+      <button class="btn-numbers btn-operators">+</button>
+      <button class="btn-numbers" >1</button>
+      <button class="btn-numbers" >2</button>
+      <button class="btn-numbers" >3</button>
+      <button class="btn-numbers btn-operators" >=</button>
+      <button class="btn-numbers" >0</button>
       <button class="btn-numbers btn-operators" id="btnD">.</button>
     </div>
   </div>
