Fixed some errors

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <link rel="stylesheet" href="src/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>calculator</title>
+  <title>Calculator</title>
 </head>
 
 <body class="h-screen flex items-center justify-center">
   <div class="bg-gray-400 h-2/3 w-72 py-4 rounded-lg shadow-xl">
     <input class="bg-white w-full py-5 focus:outline-none text-4xl text-left text-black" id="display" type="text" readonly>
     <div class="grid grid-cols-4 mt-4 gap-2 px-2" >
-      <button class="btn-numbers btn-operators" id="btnC">C</button>
-      <button class="btn-numbers btn-operators"  id="btnB">&#x21FD</button>
-      <button class="btn-numbers btn-operators" id="divisor">/</button>
-      <button class="btn-numbers btn-operators" id="mult">*</button>
+      <button class="btn-numbers btn-operators" >C</button>
+      <button class="btn-numbers btn-operators"  >&#x21FD</button>
+      <button class="btn-numbers btn-operators" >/</button>
+      <button class="btn-numbers btn-operators" >*</button>
       <button class="btn-numbers" >7</button>
       <button class="btn-numbers" >8</button>
       <button class="btn-numbers" >9</button>
@@ -30,7 +30,7 @@
       <button class="btn-numbers" >3</button>
       <button class="btn-numbers btn-operators" >=</button>
       <button class="btn-numbers" >0</button>
-      <button class="btn-numbers btn-operators" id="btnD">.</button>
+      <button class="btn-numbers btn-operators ">.</button>
     </div>
   </div>
   <script type="module" src="/src/main.js"></script>
